Wed Mar  3 16:58:16 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * include/makeinclude/rules.nested.GNU:
          Don't use the "-C" option when invoking make recursively, use
          the "cd subdir && make ..." variant instead.  This fixes a
          compatibility problem Clearmake.  Thanks to "Pai, Ganesh"
          <GPai@sonusnet.com> for this suggestion.

Wed Mar  3 13:43:17 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:
          Use a variable $TARGET_SEP instead of '-' to seperate the
          project name from the target.  Thanks to Chad Elliott
          <elliott_c@ociweb.com> for reporting the problem.

Wed Mar  3 07:42:54 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/StringProcessor.pm:

          Rewrote my optimization from Tue Mar  2 12:28:09 2004 such that
          escaped double quotes are preserved.

Wed Mar  3 07:08:11 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          When dealing with template's, we need to take into account the
          possibility of windows absoulte paths (eg. c:\foo\gnu.mpd).

Tue Mar  2 20:03:43 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * ace/OS_NS_unistd.h (rmdir):
        * ace/OS_NS_unistd.inl (rmdir):

          Added ACE_OS::rmdir() implementation submitted by Andrew
          T. Finnell <andrew@activesol.net>.  [Bug 1409]

Wed Mar  3 03:23:35 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/modules/GNUACEProjectCreator.pm:
          Add a reverseclean target that only has a realclean dependency,
          so that callers expecting a reverseclean target will get still
          work.  Since reverseclean is not implemented in normal
          makefiles, just in top level ones, this target must be handled
          explicitly.  A lot of autobuilds still call reverseclean.
